--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.0",
-    "@fortawesome/fontawesome-free-solid": "^5.0.2",
-    "@fortawesome/react-fontawesome": "0.0.17",
     "bootstrap": "^3.3.7",
+    "history": "^4.7.2",
     "node-sass-chokidar": "0.0.3",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
-    "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src/Assets/scss --include-path ./node_modules src/Assets/scss -o src/Assets/css",
