--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-dynamic-breadcrumbs": "^2.1.0",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2"
   },
