--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-dynamic-breadcrumbs": "^2.1.0",
     "react-scripts": "1.0.17",
+    "react-scrollspy": "^3.3.5",
     "redux": "^3.7.2"
   },
   "scripts": {
